# lydata

./: .gitignore  .pre-commit-config.yaml  2021-oropharynx  CHANGELOG.md  CITATION.cff  LICENSE  README.md  README.rst  dvc.yaml  modalities.ly.yaml  modalities.yaml  pyproject.toml  render.py  requirements.in  requirements.txt
.dvc/: config
.github/workflows/: build.yml  tests.yml
2021-clb-oropharynx/: CITATION.cff  README.md  README.template  data.csv  dvc.yaml  mapping.py  raw.csv
2021-clb-oropharynx/figures/: .gitignore
2021-oropharynx/: CITATION.cff  README.md  figures.ipynb
2021-usz-oropharynx/: CITATION.cff  README.md  data.csv  figures.ipynb
2021-usz-oropharynx/figures/: .mplstyle
2022-clb-multisite/: .gitignore  README.md  README.template  data.csv  dvc.yaml  mapping.py  render.py
2022-isb-multisite/: README.md  README.template  data.csv  dvc.yaml  mapping.py  raw.csv
2023-clb-multisite/: CITATION.cff  README.md  README.template  data.csv  mapping.py  raw.csv  raw.csv.dvc
2023-hvh-oropharynx/: README.md  data.csv  raw.csv  raw.xlsx
2023-isb-multisite/: CITATION.cff  README.md  README.template  data.csv  mapping.py  raw.csv
2023-isb-multisite/figures/: .gitignore
2024-hvh-oropharynx/: CITATION.cff  README.md  data.csv  raw.csv
2025-hvh-oropharynx/: CITATION.cff  README.md  data.csv
docs/source/: accessor.rst  conf.py  index.md  loader.rst  utils.rst  validator.rst
lydata/: __init__.py  _version.py  accessor.py  loader.py  utils.py  validator.py
scripts/: age_and_sex.py  bar_plot.py  drop_cols.py  factors_diff.py  ipsi_contra.py  render.py  scenario_showcase.py  shared.py  subsite.py  t_category.py  upset_diff.py
