[build-system]
requires = [
	"setuptools >= 64",
    "setuptools_scm",
	"wheel"
]
build-backend = "setuptools.build_meta"

[project]
name = "lydata"
dynamic = ["version"]
description = "Library for handling lymphatic involvement data"
authors = [
	{name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
requires-python = ">=3.10"
keywords = ["data", "lymph", "involvement"]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "pandas",
    "pygithub",
    "mistletoe",
    "pandera",
]

[project.urls]
source = "https://github.com/rmnldwg/lydata"

[project.optional-dependencies]
dev = [
    "pre-commit",
]
docs = [
    "sphinx",
    "sphinx-book-theme",
    "sphinx-autodoc-typehints",
    "myst-parser[linkify]",
]
tests = [
    "pytest",
]

[tool.setuptools.packages.find]
include = ["lydata"]

[tool.setuptools.package-data]
"lydata" = ["../*/data.csv"]

[tool.setuptools_scm]
write_to = "lydata/_version.py"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
testpaths = "."

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "R", "U", "D", "I", "S", "T", "A", "N"]

[tool.isort]
line_length = 79
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.pycln]
all = true

[tool.markdownlint]
MD003 = false
MD013 = false
MD033 = false
MD041 = false
